force-app/main/default/objects/Performance_Alert_History__c/fields/Context_Record__c.field-meta.xml
<CustomField>
    <fullName>Context_Record__c</fullName>
    <label>Context Record</label>
    <type>Text</type>
    <length>18</length>
</CustomField>