force-app/main/default/objects/Performance_Alert_History__c/fields/Metric__c.field-meta.xml
<CustomField>
    <fullName>Metric__c</fullName>
    <label>Metric</label>
    <type>Text</type>
    <length>100</length>
</CustomField>