force-app/main/default/objects/Performance_Alert_History__c/fields/Threshold__c.field-meta.xml
<CustomField>
    <fullName>Threshold__c</fullName>
    <label>Threshold</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>4</scale>
</CustomField>